--- a/Style/css/style.css
+++ b/Style/css/style.css
@@ -114,7 +114,7 @@ section.center {
         -ms-flex-align: center;
             align-items: center;
   }
-  .flex__row div.center {
+  div.flex__row div.center {
     width: 100%;
   }
   .flex__row.logos {
@@ -157,6 +157,14 @@ section.center {
             align-items: center;
   }
   .flex__column {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  footer div.socials.flex__row {
+    padding-left: 0;
+  }
+  footer div.flex__column {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
